2007-12-16  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkbox.xml: remove a duplicate in gtk.Box properties.

2007-12-16  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwindow.xml: fix a small namespace bug.

2007-12-15  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-pangolayout.xml: mention pango.WRAP_WORD_CHAR, fix bug #400540

2007-10-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdkwindow.xml: add composited window example.

2007-10-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtknotebook.xml: describe buildable interface. Fix #364496
	gtk.notebook_set_window_creation_hook not documented.

2007-10-25  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Spread Buildable interface in (almost) all widgets.

2007-10-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdk-functions.xml:
	* pygtk-gdkwindow.xml:
	* pygtk-gdkevent.xml:
	* pygtk-gdkkeymap.xml:
	* pygtk-gdkdisplay.xml:
	* pygtk-gdkcolor.xml: Updated with 2.12 API.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktextview.xml: fix bug #389422.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktreemodel.xml: fix bug #375584.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwidget.xml: fix bug #365236.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkactiongroup.xml: fix bug #421575.

2007-10-18  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwidget.xml: Updated with 2.12 API, fix bug #360679.
	* pygtk-gtkwindow.xml: Updated with 2.12 API.

2007-10-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktreeview.xml:
	* pygtk-gtktreeviewcolumn.xml:
	* pygtk-gtktexttag.xml:
	* pygtk-gtktoolitem.xml:
	* pygtk-gtktextbuffer.xml: Updated with 2.12 API.

2007-10-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkstatusicon.xml:
	* pygtk-gtksettings.xml:
	* pygtk-gtkscrolledwindow.xml: Updated with 2.12 API.

2007-09-31  Gian Mario Tagliaretti  <gianmt@gnome.org>
