@@ -14,11 +14,10 @@ PyGTK 2.8)</refpurpose>
 
     <classsynopsis language="python">
       <ooclass><classname>pangocairo.CairoContext</classname></ooclass>
-      <ooclass><classname><link
-linkend="class-pangocairocairocontext">pangocairo.CairoContext</link></classname></ooclass>
-
+      <ooclass><classname><link linkend="class-cairocontext">cairo.Context</link></classname></ooclass>
       <constructorsynopsis language="python">
-        <methodname>pangocairo.CairoContext</methodname>
+        <methodname><link linkend="constructor-pangocairocairocontext">pangocairo.CairoContext</link></methodname>
+        <methodparam><parameter role="keyword">cr</parameter></methodparam>
       </constructorsynopsis>
       <methodsynopsis language="python">
         <methodname><link linkend="method-pangocairocairocontext--update-context">update_context</link></methodname>
@@ -85,16 +84,42 @@ for drawing on Cairo surfaces.</para>
 
     <para>PyGTK (and GTK+ and GDK) does not wrap the Cairo API, instead
 <link
-linkend="class-pangocairocairocontext"><classname>pangocairo.CairoContext</classname></link>
+linkend="class-gdkcairocontext"><classname>gtk.gdk.CairoContext</classname></link>
 objects can be used to draw on <link
 linkend="class-gdkdrawable"><classname>gtk.gdk.Drawable</classname></link>
 objects. A <link
-linkend="class-pangocairocairocontext"><classname>pangocairo.CairoContext</classname></link>
+linkend="class-gdkcairocontext"><classname>gtk.gdk.CairoContext</classname></link>
 is created using the <link
 linkend="method-gdkdrawable--cairo-create"><methodname>gtk.gdk.Drawable.cairo_create</methodname>()</link>
 method. See the <link
-linkend="class-pangocairocairocontext"><classname>pangocairo.CairoContext</classname></link>
+linkend="class-gdkcairocontext"><classname>gtk.gdk.CairoContext</classname></link>
 and Python cairo module documentation for additional methods.</para>
+
+  </refsect1>
+  
+  <refsect1 id="constructor-pangocairocairocontext">
+    <title>Constructor</title>
+
+    <programlisting><constructorsynopsis language="python">
+	<methodname>pangocairo.CairoContext</methodname>
+	<methodparam><parameter role="keyword">cr</parameter></methodparam>
+      </constructorsynopsis></programlisting>
+    <variablelist>
+      <varlistentry>
+	<term><parameter role="keyword">cr</parameter>&nbsp;:</term>
+        <listitem><simpara>a <classname><link linkend="class-cairocontext">cairo.Context</link></classname>
+        </simpara></listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis>Returns</emphasis>&nbsp;:</term>
+	<listitem><simpara>a new <link
+linkend="class-pangocairocairocontext"><classname>pangocairo.CairoContext</classname></link>.</simpara></listitem>
+      </varlistentry>
+    </variablelist>
+
+    <para>Creates a new <link
+linkend="class-pangocairocairocontext"><classname>pangocairo.CairoContext</classname></link></para>
+
 
   </refsect1>
 
