@@ -1,3 +1,8 @@
+2007-12-24  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* pygtk-pangocairocairocontext.xml: fix base class name, add a
+	constructor section and fix the description section.
+
 2007-12-16  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
 	* pygtk-gtkbox.xml: remove a duplicate in gtk.Box properties.
